--- a/gavin-williams.html
+++ b/gavin-williams.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Joshua G. Williams — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -22,6 +24,12 @@
     background: #2E5084;
     color: #ffffff;
     margin-bottom: 1.5rem;
+  }
+
+  .prospect-hero-main {
+    flex: 1 1 60%;
+    max-width: 70%;
+    min-width: 260px;
   }
 
   .prospect-name {
@@ -164,12 +172,12 @@
     }
   }
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">JOSHUA G. WILLIAMS</h1>
@@ -179,103 +187,111 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">8.8</div>
+      <div class="grade-score">81</div>
       <div class="grade-tier">Round 4–5 Candidate</div>
-      <div class="grade-note">Elite behavioral upside; résumé + consistency still developing</div>
+      <div class="grade-note">Elite behavioral upside; résumé and consistency still developing</div>
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
+    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Princeton University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Economics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">N/A</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Football</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Trussville, AL</span></li>
+        <li><span>School</span><span class="meta-value">Princeton University</span></li>
+        <li><span>Major</span><span class="meta-value">Economics</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.1</span></li>
+        <li><span>Sport</span><span class="meta-value">Football 🏈</span></li>
+        <li><span>Hometown</span><span class="meta-value">Trussville, AL</span></li>
       </ul>
     </div>
 
+    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">22 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.1</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">14. Two-Way Player</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Official Points</span><span class="meta-value">713.5</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">28 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">22 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">28 / 30</span></li>
+        <li>
+          <span>Personality</span>
           <span class="meta-value">
-            Great personality + on-time submissions · occasionally missed instructions · asks strong questions
+            14. Two-Way Player<br>
+            (Socially Attuned Personality · adaptive communication · relationship range)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Bureaucratic Leader<br>
+            (By the Book · process discipline · consistency)
           </span>
         </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the highest-upside behavioral profiles in the entire Diamond League class. Joshua brings natural 
-      interpersonal presence, strong curiosity, and a Two-Way Player adaptability that makes him comfortable in 
+      One of the highest-upside behavioral profiles in the entire Diamond League class. Joshua brings natural
+      interpersonal presence, strong curiosity, and a Two-Way Player adaptability that makes him comfortable in
       almost any room. He communicates well, asks thoughtful questions, and consistently engages with the material.
       <br><br>
-      His MAP performance is solid from a reliability standpoint — assignments generally submitted on time — but 
-      he occasionally skipped details or misread instructions, signaling that his eagerness sometimes outpaces 
-      his preparation. The intent is strong; the process needs tightening.
+      His MAP performance is solid from a reliability standpoint — assignments generally submitted on time — but he
+      occasionally skipped details or misread instructions, signaling that his eagerness sometimes outpaces his
+      preparation. The intent is strong; the process needs tightening so that his day-to-day work matches the quality
+      of his presence.
       <br><br>
-      With a lower GPA and a résumé that is still developing, Joshua isn’t yet at the top of the analyst-ready 
-      pipeline. But his elite behavioral foundation, genuine curiosity, and coachable demeanor give him meaningful 
-      long-term upside. He is exactly the type of candidate who could benefit from a second MAP fellowship season 
-      to fully realize his potential.
+      With a GPA and résumé that are still developing, Joshua isn’t yet at the top of the analyst-ready pipeline.
+      But his elite behavioral foundation, genuine curiosity, and coachable demeanor give him meaningful long-term
+      upside. He is exactly the type of candidate who could benefit from a second MAP fellowship season to fully
+      realize his potential.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite adaptability:</strong> Natural Two-Way Player; comfortable communicating with any personality type.</li>
-      <li><strong>Strong curiosity:</strong> Asks thoughtful, high-quality questions that show genuine engagement.</li>
-      <li><strong>Reliable engagement:</strong> Submits assignments on time; stays active and communicative throughout the season.</li>
-      <li><strong>Emotional intelligence:</strong> Reads people well; carries himself with poise and relatability.</li>
-      <li><strong>Leadership exposure:</strong> D1 athlete, BSAC member, NAACP participant — broad service and community background.</li>
-      <li><strong>Structured diligence:</strong> WCAS experience + Training the Street foundation gives him solid early finance exposure.</li>
+      <li><strong>Elite adaptability:</strong> Natural Two-Way Player; comfortable communicating with a wide range of personalities and styles.</li>
+      <li><strong>Strong curiosity:</strong> Asks thoughtful, high-quality questions that show genuine engagement and a desire to improve.</li>
+      <li><strong>Reliable engagement:</strong> Stays active and communicative throughout the season; generally on time with submissions.</li>
+      <li><strong>Emotional intelligence:</strong> Reads people well; carries himself with poise, approachability, and authenticity.</li>
+      <li><strong>Leadership exposure:</strong> D1 football, BSAC involvement, NAACP participation, and campus engagement signal community orientation.</li>
+      <li><strong>Early finance reps:</strong> WCAS experience and Training the Street coursework provide a solid introductory finance foundation.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Must slow down and read instructions fully before asking questions or submitting work.</li>
-      <li>GPA and résumé strength need to trend upward to match his behavioral talent.</li>
-      <li>Should strengthen technical and analytical reps to pair with strong communication skills.</li>
-      <li>Needs another full MAP cycle to sharpen professional habits and consistency.</li>
+      <li>Slow down to fully read and internalize instructions before asking questions or submitting work.</li>
+      <li>Strengthen GPA and on-paper résumé to better align with his behavioral talent and room presence.</li>
+      <li>Build more technical and analytical reps (accounting, valuation, basic modeling) to complement communication strengths.</li>
+      <li>Would benefit from another full MAP cycle to harden professional habits, detail orientation, and consistency.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 4–5 MAP prospect with an elite behavioral foundation and natural Two-Way Player instincts. 
-      Joshua’s communication, curiosity, and on-paper adaptability give him real long-term potential — but he 
-      needs structure, repetition, and resume building before entering competitive 2027 pipelines. A second MAP 
-      fellowship would likely elevate him into a stronger Round 2–3 candidate.
+      A Round 4–5 MAP prospect with an elite behavioral foundation and natural Two-Way Player instincts. Joshua’s
+      communication, curiosity, and adaptability give him real long-term potential — but he needs structure,
+      repetition, and continued résumé building before entering competitive 2027 pipelines. A second MAP fellowship
+      would likely elevate him into a stronger Round 2–3 conversation.
     </p>
   </section>
 
 </div>
+</body>
+</html>
