--- a/katherine-malloy.html
+++ b/katherine-malloy.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Katherine Malloy — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -69,7 +71,6 @@
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
-    margin-bottom: 0.1rem;
   }
 
   .grade-note {
@@ -164,12 +165,12 @@
     }
   }
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">KATHERINE MALLOY</h1>
@@ -185,40 +186,49 @@
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Georgetown University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Global Business</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Spanish</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Field Hockey</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Lake Forest, IL</span></li>
+        <li><span>School</span><span class="meta-value">Georgetown University</span></li>
+        <li><span>Major</span><span class="meta-value">Global Business</span></li>
+        <li><span>Minor</span><span class="meta-value">Spanish</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>Sport</span><span class="meta-value">Field Hockey 🏑</span></li>
+        <li><span>Hometown</span><span class="meta-value">Lake Forest, IL</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">20 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.72</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">1. Behind the Scenes</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Fall Rank</span><span class="meta-value">20 / 63</span></li>
+        <li><span>GPA</span><span class="meta-value">3.72</span></li>
+        <li><span>Personality</span>
+          <span class="meta-value">
+            1. Behind the Scenes<br>
+            (Reserved Personality · Attention to Detail · Methodical Work Ethic)
+          </span>
+        </li>
+        <li><span>Leadership</span>
+          <span class="meta-value">
+            Democratic Leader<br>
+            (Team Input · Collaboration · Shared Ownership)
+          </span>
+        </li>
+        <li><span>Performance</span>
           <span class="meta-value">
             Reliable + on time · quiet presence · instructions followed well but résumé still developing
           </span>
         </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
@@ -232,52 +242,47 @@
       without prompting. Her résumé, while solid, is not yet as competitive as many of the top-tier Diamond League 
       prospects — which places her more firmly in the Round 3–4 range at this stage.
       <br><br>
-      Still, Katherine’s consistency, discipline, academic strength, and bilingual skill set give her meaningful 
-      upside, particularly in people-oriented teams that value reliability and low-ego contributors. With continued 
-      exposure, résumé-building, and confidence in speaking up, she could develop into a strong, dependable analyst 
-      in competitive pipelines.
+      Still, Katherine’s consistency, discipline, academic strength, and bilingual communication skills give her 
+      meaningful upside. With more live-rep exposure, résumé development, and confidence in asserting her voice, 
+      she could evolve into a highly trusted, low-ego analyst in competitive business and finance pipelines.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Reliable and steady:</strong> Consistently on time with assignments; brings disciplined follow-through.</li>
-      <li><strong>Behind the Scenes leadership:</strong> Leads by example; quietly sets standards through preparation and execution.</li>
-      <li><strong>Academic strength:</strong> 3.72 GPA in Global Business with Spanish minor; strong cross-cultural adaptability.</li>
-      <li><strong>Community-driven:</strong> Youth coaching, nonprofit service, and long-term volunteer roles show character and care.</li>
-      <li><strong>Team-first mentality:</strong> D1 athlete who prioritizes role clarity, discipline, and coachability.</li>
-      <li><strong>Emerging professional experience:</strong> Nordstrom seasonal work demonstrates customer-facing poise and sales growth.</li>
+      <li><strong>Reliable and steady:</strong> Consistently on time with assignments; disciplined follow-through.</li>
+      <li><strong>Behind the Scenes strengths:</strong> Reserved, detail-oriented, methodical work ethic.</li>
+      <li><strong>Academic strength:</strong> 3.72 GPA in Global Business with Spanish minor.</li>
+      <li><strong>Community-driven:</strong> Long-standing volunteer and youth coaching roles.</li>
+      <li><strong>Team-first mentality:</strong> Low-ego contributor; maintains discipline and role clarity.</li>
+      <li><strong>Customer-facing experience:</strong> Seasonal Nordstrom work shows poise and sales mindset.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Very quiet in group settings — needs to speak up more to show leadership potential.</li>
-      <li>Résumé lacks the depth and technical exposure of top Diamond League peers.</li>
+      <li>Very quiet in group settings — needs practice asserting her voice in discussions.</li>
+      <li>Résumé lacks the technical depth of top Diamond League peers.</li>
       <li>Should develop stronger storytelling and confidence in interviews.</li>
       <li>Needs more hands-on business or finance-facing experience.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 3–4 MAP prospect with high reliability, strong academics, and a low-ego, team-first style. 
-      Katherine profiles as a dependable contributor who strengthens culture through consistency and effort. 
-      With additional résumé depth and more vocal confidence, she could evolve into a highly trusted analyst 
-      in competitive business and finance pipelines.
+      A Round 3–4 MAP prospect with strong reliability, academic discipline, and a low-ego,
+      team-first execution style. With additional résumé depth and greater vocal presence, she 
+      could grow into a highly dependable analyst in competitive finance and business pipelines.
     </p>
   </section>
 
 </div>
+</body>
+</html>
+
