--- a/kiley-wilhelm.html
+++ b/kiley-wilhelm.html
@@ -167,6 +167,9 @@
 
 <div class="prospect-page">
 
+  <!-- ============================= -->
+  <!-- HERO -->
+  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">KILEY WILHELM</h1>
@@ -182,67 +185,94 @@
     </div>
   </section>
 
+  <!-- ============================= -->
+  <!-- META -->
+  <!-- ============================= -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Harvard University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Applied Mathematics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Economics</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Swimming & Diving</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Charlotte, NC</span></li>
+        <li><span>School</span><span class="meta-value">Harvard University</span></li>
+        <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
+        <li><span>Minor</span><span class="meta-value">Economics</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming & Diving 🏊‍♀️</span></li>
+        <li><span>Hometown</span><span class="meta-value">Charlotte, NC</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">10 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.95</span></li>
-        <li><span class="meta-key">Captain</span><span class="meta-value">1 of 6 Captains</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">10. Podium Sweep</span></li>
-        <li><span class="meta-key">Performance</span><span class="meta-value">Completed all Extra Rep assignments</span></li>
+        <li><span>Fall Rank</span><span class="meta-value">10 / 63</span></li>
+        <li><span>GPA</span><span class="meta-value">3.95</span></li>
+        <li><span>Captain</span><span class="meta-value">1 of 6 Captains</span></li>
+        <li><span>Personality</span><span class="meta-value">10. Podium Sweep</span></li>
+        <li><span>Performance</span><span class="meta-value">Completed all Extra Rep assignments</span></li>
       </ul>
     </div>
   </section>
 
+  <!-- ============================= -->
+  <!-- OVERVIEW -->
+  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the most reliable and disciplined prospects in the Fall Diamond League. Kiley distinguished
-      herself not only through a top-10 finish but by completing every optional “Extra Rep” assignment —
-      an extremely rare signal of discipline and internal drive. A classic Podium Sweep competitor:
-      structured, composed, and grounded in preparation.
+      Kiley is one of the most mature and self-directed prospects in the entire Diamond League class — and the 
+      only athlete whose professionalism is shaped by a gap year spent training to qualify for the U.S. Olympic 
+      Swim Trials. That experience shows up everywhere: poise under pressure, emotional steadiness, and an 
+      uncommon ability to regulate herself when stakes rise.
+      <br><br>
+      A top-10 finisher who completed every optional Extra Rep assignment, Kiley embodies the Podium Sweep archetype 
+      at its highest level — disciplined, composed, and grounded in preparation. She leads with quiet confidence and 
+      sets a culture standard through consistency rather than volume.
+      <br><br>
+      Her one meaningful growth area is communication pace. Kiley tends to take a few days to respond over email or 
+      regroup after feedback — a sign of her thoughtful, internal processor style. While this reflects care and 
+      intentionality, it also means she trails the more rapid-response captains in real-time communication. Framed 
+      positively: when she does respond, the quality is exceptionally high.
     </p>
   </section>
 
+  <!-- ============================= -->
+  <!-- STRENGTHS -->
+  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite reliability:</strong> Completed all assignments plus every optional Extra Rep.</li>
-      <li><strong>Academic horsepower:</strong> Applied Math + Econ + 3.95 GPA.</li>
-      <li><strong>Composed communicator:</strong> Pauses strategically to answer crisply.</li>
-      <li><strong>Highly coachable:</strong> Quickly absorbs MAP frameworks.</li>
-      <li><strong>Competitive engine:</strong> Full Podium Sweep wiring.</li>
-      <li><strong>Self-awareness:</strong> Extremely accurate self-assessor.</li>
+      <li><strong>Mature presence:</strong> Gap year training for the Olympic Swim Trials shows up in poise and pressure management.</li>
+      <li><strong>Elite reliability:</strong> Completed every assignment and all Extra Reps — extremely rare signal of discipline.</li>
+      <li><strong>Academic horsepower:</strong> Applied Mathematics + Economics + 3.95 GPA.</li>
+      <li><strong>Composed communicator:</strong> Uses pauses and structured thinking to deliver clear, concise answers.</li>
+      <li><strong>High coachability:</strong> Quickly absorbs MAP frameworks and applies them with precision.</li>
+      <li><strong>Self-awareness:</strong> Has one of the strongest self-assessment profiles in the program.</li>
+      <li><strong>Professional demeanor:</strong> Calm, grounded, and mature beyond her age.</li>
     </ul>
   </section>
 
+  <!-- ============================= -->
+  <!-- AREAS FOR DEVELOPMENT -->
+  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Prefers structured methods; more unstructured case exposure will help.</li>
-      <li>Quieter environments preferred — early exposure to fast-paced sprints beneficial.</li>
-      <li>Next behavioral step: more storytelling depth.</li>
+      <li>Communication speed — tends to take longer to respond or bounce back after feedback; quality is high but pace lags peers.</li>
+      <li>Prefers structure — more practice in messy, ambiguous case settings will accelerate growth.</li>
+      <li>Behavioral storytelling — adding warmth and narrative depth will elevate her already strong communication.</li>
     </ul>
   </section>
 
+  <!-- ============================= -->
+  <!-- PROJECTION -->
+  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Clear Round 1–2 MAP prospect for 2027 IB recruiting. High floor, excellent discipline, and technical
-      upside create a profile built to excel early in analyst roles.
+      A clear Round 1–2 MAP prospect with exceptional discipline, maturity, and academic strength. Kiley’s 
+      Olympic-caliber poise, reliability, and analytical foundation give her a high floor from day one. With 
+      continued emphasis on communication pace and narrative depth, she projects as a standout analyst in 
+      competitive 2027 pipelines — and one of the most mature leaders in the Diamond League cohort.
     </p>
   </section>
 
