--- a/kiley-wilhelm.html
+++ b/kiley-wilhelm.html
@@ -179,7 +179,7 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.8</div>
+      <div class="grade-score">95</div>
       <div class="grade-tier">Round 1–2 Candidate</div>
       <div class="grade-note">High-floor, high-discipline performer</div>
     </div>
@@ -189,6 +189,7 @@
   <!-- META -->
   <!-- ============================= -->
   <section class="prospect-meta">
+    <!-- PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -196,19 +197,34 @@
         <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
         <li><span>Minor</span><span class="meta-value">Economics</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.95</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving 🏊‍♀️</span></li>
         <li><span>Hometown</span><span class="meta-value">Charlotte, NC</span></li>
       </ul>
     </div>
 
+    <!-- MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fall Rank</span><span class="meta-value">10 / 63</span></li>
-        <li><span>GPA</span><span class="meta-value">3.95</span></li>
-        <li><span>Captain</span><span class="meta-value">1 of 6 Captains</span></li>
-        <li><span>Personality</span><span class="meta-value">10. Podium Sweep</span></li>
-        <li><span>Performance</span><span class="meta-value">Completed all Extra Rep assignments</span></li>
+        <li><span>Official Points</span><span class="meta-value">1649.5</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">5 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">10 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">5 / 30</span></li>
+        <li>
+          <span>Personality</span>
+          <span class="meta-value">
+            10. Podium Sweep<br>
+            (Relentless Competitor · High Standards · Results-Driven)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Bureaucratic Leader · 1 of 6 Captains<br>
+            (Process-Oriented · Detail-Driven · High Accountability)
+          </span>
+        </li>
       </ul>
     </div>
   </section>
