--- a/lauren-yu.html
+++ b/lauren-yu.html
@@ -179,7 +179,7 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.5</div>
+      <div class="grade-score">91</div>
       <div class="grade-tier">Round 1–2 Candidate</div>
       <div class="grade-note">Elite résumé · consistent execution · strong interpersonal upside</div>
     </div>
@@ -189,27 +189,40 @@
   <!-- META -->
   <!-- ============================= -->
   <section class="prospect-meta">
+    <!-- PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">UNC Chapel Hill</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Business Administration</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Statistics & Analytics</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Fencing</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Cresskill, NJ</span></li>
+        <li><span>School</span><span class="meta-value">UNC Chapel Hill</span></li>
+        <li><span>Major</span><span class="meta-value">Business Administration</span></li>
+        <li><span>Minor</span><span class="meta-value">Statistics &amp; Analytics</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.9</span></li>
+        <li><span>Sport</span><span class="meta-value">Fencing 🤺</span></li>
+        <li><span>Hometown</span><span class="meta-value">Cresskill, NJ</span></li>
       </ul>
     </div>
 
+    <!-- MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">5 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.9</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">14. Two-Way Player</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Official Points</span><span class="meta-value">1317.5</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">14 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">5 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">14 / 30</span></li>
+        <li>
+          <span>Personality</span>
           <span class="meta-value">
-            Early submissions · top performer · strong empathy + cross-personality adaptability
+            14. Two-Way Player<br>
+            (Balanced Communicator · Team Connector · Adaptable Contributor)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Democratic Leader<br>
+            (Collaborative · Inclusive · Voice-Amplifying)
           </span>
         </li>
       </ul>
@@ -225,8 +238,8 @@
       Lauren is one of the most consistently elite Fellows in the Diamond League — a high-achieving 
       academic performer, nationally recognized Division I fencer, and one of the most polished interpersonal 
       profiles in the entire class. While her résumé is already among the strongest, what truly separates her is 
-      her **Two-Way Player capacity**: she is equally comfortable driving high-level analytical work and building 
-      strong rapport with any personality type.
+      her <strong>Two-Way Player capacity</strong>: she is equally comfortable driving high-level analytical work 
+      and building strong rapport with any personality type.
       <br><br>
       People naturally open up to her. She leads with warmth, humor, and empathy — which has made her an anchor 
       on the UNC fencing team, across nonprofits, and now within MAP’s case environments. Her ability to connect 
@@ -246,12 +259,12 @@
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
       <li><strong>Two-Way interpersonal excellence:</strong> People naturally trust her; blends empathy, clarity, and humor.</li>
-      <li><strong>Elite consistency:</strong> Submits early, high-quality work every week, no dips across the season.</li>
-      <li><strong>Résumé strength:</strong> Deep analytical experience in UNC M&A Group, investment analysis, and valuation roles.</li>
-      <li><strong>Academic firepower:</strong> 3.9 GPA in Kenan-Flagler Business School + Stats & Analytics minor.</li>
+      <li><strong>Elite consistency:</strong> Submits early, high-quality work every week, with no dips across the season.</li>
+      <li><strong>Résumé strength:</strong> Deep analytical experience in UNC M&amp;A Group, investment analysis, and valuation roles.</li>
+      <li><strong>Academic firepower:</strong> 3.9 GPA in Kenan-Flagler Business School with a Statistics &amp; Analytics minor.</li>
       <li><strong>High-level athletic pedigree:</strong> NCAA competitor, nationally ranked, All-American honors in fencing.</li>
       <li><strong>Cultural leader:</strong> Elevates team cohesion; strong mentor and reliable presence in group environments.</li>
-      <li><strong>Creative edge:</strong> Award-winning artist + strong technical toolkit (Tableau, R, MATLAB, Adobe Suite).</li>
+      <li><strong>Creative edge:</strong> Award-winning artist with a strong technical toolkit (Tableau, R, MATLAB, Adobe Suite).</li>
     </ul>
   </section>
 
@@ -261,7 +274,7 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>As she grows, can lean into more vocal leadership in group settings.</li>
+      <li>As she grows, can lean into more vocal leadership in high-stakes group settings.</li>
       <li>Continue sharpening timed behavioral responses to fully showcase her multidimensional background.</li>
       <li>Next step is stepping confidently into front-of-room roles — presentations, client-style communication, etc.</li>
     </ul>
